--- a/css charity.css
+++ b/css charity.css
@@ -226,11 +226,17 @@ div.donate{
 
 /* Footer */
 
+container{ 
+    background-color: black;
+    padding: 
+}
+
 footer{
     background: rgb(16, 14, 17);
     height: auto;
     width: 100vw;
     padding: 25px;
+   
 }
 
 div.footer-content{
@@ -239,8 +245,10 @@ div.footer-content{
     justify-content: center;
     flex-direction: column;
     text-align: center;
-    background: rgb(13, 13, 15);
-    color: rgb(235, 230, 230);
+    background: rgb(4, 4, 4);
+    color: rgb(234, 220, 220);
+    backgrou
+    
 }
 
 div.footer-h3{
@@ -250,6 +258,7 @@ div.footer-h3{
     line-height: 28px;
     font-size: 14px;
     background: rgb(10, 10, 11) !important;
+    
 }
 
 div.footer-bottom{
