--- a/css charity.css
+++ b/css charity.css
@@ -1,61 +1,22 @@
 * {
-    
-    background-color: rgba(239, 227, 218, 0.914);
-}
-
-.container {
-    position: absolute;
-    margin: 20px;
-    width: auto;
-}
-
-header a {
-    margin: 0 20px;
-    text-decoration: none;
-    color: rgb(40, 179, 75);
-    font-size: 20px;
-    font-weight: bold;
+    background-color: whitesmoke;
 }
 
 img#Logo {
-    
-    display: incline-block;
+    display:inline-block;
     position: fixed;
-    top: 0;
-    right: 0;
     height: 100px;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
     padding: 0 px;
 }
 
-nav a{
-    display: flex;
-    flex-direction: column;
-    background-color:rgb(66, 69, 67);
-     width: 20%; 
-    padding: 5px;
-    /* position: relative;
-    overflow: hidden; */
-    color: rgb(200, 184, 184);
-    text-decoration: none;
-    font-size: 18px;
-    background-color: rgb(4, 6, 4);
-    color: white;
-    margin: 5px 0;
-    border-radius:5px;
-    transition: 0.2 all ease-in-out;
-}
-
-nav ul {
-    list-style-type: none;
-}
-
-
-nav a:hover {
-    opacity: 1;
-    letter-spacing: 10px;
-    font-weight: bold;
-    color: black;
+nav{
+    float: right;
+    display: inline-flex;
+    justify-content: flex-end;
+    font-size: 30px;
+    text-align: center;
+    margin-bottom: 15px;
 }
 
 h1#header1{
@@ -121,169 +82,12 @@ div#joinusbutton{
     padding: 0px;
     align-items: center;
     text-align: center;
-    color: darkred;
-    
-}
-.page-wrapper {
-    min-height: 100;
-}
-
-input#submit2{
-  font-family: 'Roboto Condensed', sans-serif;
-  font-weight: bold;
-  background-color: #8ab042;
-  color: #fff;
-  border-radius: 5px;
-  width: 114px;
-  height: 37px;
-}
-
-donation page
-
-/*div.input-group-1 {
-    color: #427bb8;
-  }*/
-button.back {
-    color: #cc851c;
-  }
-button.next {
-   color: #f4f6f1;
-  }
-  /*div.clearfix{
-    background-color: #666666;
-  }*/
-  
-div.donate{
-    margin: 15px 0px 14px;
-    padding: 18px 0px 10px;
-    font-family: 'Roboto Condensed', sans-serif;
-    border-right: 1px dotted #2a4f76;
-    font-size: 18px;
-  }
-  /*.donate-buttons>li>a {
-    font-size: 20px;
-    font-family: 'Roboto Condensed', sans-serif;
-    font-weight: bold;
-    position: relative;
-    display: block;
-    padding: 10px 3px;
-    border-radius: 5px;
-  }*/
-
-  .btn-blue-other,
-  .btn-blue {
-    font-family: 'Roboto Condensed', sans-serif;
-    font-weight: bold;
-    background-color: #427bb8;
-    color: #fff;
-    border-radius: 5px;
-    border: 0;
-    padding: 0;
-    width: 75px;
-    height: 37px;
-    margin-top: 8px;
-  }
-
-  button {
-    font-family: 'Roboto Condensed', sans-serif;
-    font-weight: bold;
-    background-color: #8ab042;
-    color: #fff;
-    border-radius: 5px;
-    border: 0;
-    padding: 0;
-    width: 114px;
-    height: 37px;
-    margin-top: 8px;
-  }
-  
- /* .impact {
-    font-size: 1.1em;
-    font-weight: bold;
-    clear: both;
-  }*/
-
-  nav>li>a:hover, nav>li>a:focus {
-    text-decoration: none;
-    background-color: transparent;
-  }
-
-  .donate-buttons .active {
-    background-color: #fff;
-    border: 5px solid #427bb8;
-    color: #427bb8;
-  }
-
-  button#btn1:focus {
-  outline: -webkit-focus-ring-color auto 0px;
-  }
-  .donate-buttons li:last-child {
-    font-size: 17px;
-    line-height: 37px;
-    padding-left: 20px;
-    padding-top: 15px;
-  }
-
-/* Footer */
-
-container{ 
-    background-color: black;
-    padding: 
 }
 
 footer{
-    background: rgb(16, 14, 17);
-    height: auto;
-    width: 100vw;
-    padding: 25px;
-   
+    margin-top: 45px;
 }
 
-div.footer-content{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    text-align: center;
-    background: rgb(4, 4, 4);
-    color: rgb(234, 220, 220);
-    backgrou
-    
-}
-
-div.footer-h3{
-    font-size: 1.8rem;
-    font-weight: 400;
-    text-transform: capitalize;
-    line-height: 28px;
-    font-size: 14px;
-    background: rgb(10, 10, 11) !important;
-    
-}
-
-div.footer-bottom{
-    background: rgb(7, 8, 7);
-    width: 100vw;
-    padding: 20px 0;
-    align-items: center;
-    color: white;
-}
-
-div.footer-bottom p{
-    font-size: 16px;
-    word-spacing: 2px;
-    text-transform: capitalize;
-    display: flex;
-    background:rgb(8, 8, 9);
-    text-align: center;
-      
-}
-div.footer-bottom span{
-    text-transform: uppercase;
-    opacity: .4;
-    font-weight: 200;
-}
-
-/* this is the width of webpage I was going off of-
+//* this is the width of webpage I was going off of-
     width: 4750px;
-*/
+*//
